--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/af57e4833a.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
